now I am sure that my code is working

--- a/DSP/DSP.runs/impl_1/usage_statistics_webtalk.html
+++ b/DSP/DSP.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1756540</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Apr 17 15:12:16 2017</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Apr 17 15:49:23 2017</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2016.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>9b562c261b20467093d14aa91dfb8cb9</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>44</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>51</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>fef0074e59745dcab22eee802985a617</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211145601_0_0_600</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-5820K CPU @ 3.30GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1229.644 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1611.730 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 16.10</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>67.000 GB</TD>
@@ -38,17 +38,17 @@
 </TR><TR ALIGN='LEFT'>   <TD>customizecore=8</TD>
    <TD>customizersbblock=2</TD>
    <TD>editpaste=1</TD>
-   <TD>launchprogramfpga=40</TD>
+   <TD>launchprogramfpga=48</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
    <TD>openblockdesign=2</TD>
-   <TD>openhardwaremanager=47</TD>
+   <TD>openhardwaremanager=55</TD>
    <TD>openproject=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=4</TD>
    <TD>opentarget=1</TD>
-   <TD>programdevice=40</TD>
-   <TD>projectsettingscmdhandler=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>recustomizecore=23</TD>
-   <TD>runbitgen=48</TD>
+   <TD>programdevice=48</TD>
+   <TD>projectsettingscmdhandler=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>recustomizecore=24</TD>
+   <TD>runbitgen=56</TD>
    <TD>settopnode=2</TD>
    <TD>showview=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simulationbreak=1</TD>
@@ -56,7 +56,7 @@
    <TD>simulationrun=27</TD>
    <TD>simulationrunall=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simulationrunfortime=23</TD>
-   <TD>viewtaskprojectmanager=33</TD>
+   <TD>viewtaskprojectmanager=39</TD>
    <TD>zoomfit=3</TD>
    <TD>zoomout=4</TD>
 </TR>  </TABLE>
@@ -103,16 +103,16 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=2</TD>
     <TD>carry4=7</TD>
-    <TD>fdre=79</TD>
+    <TD>fdre=80</TD>
     <TD>fdse=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=8</TD>
     <TD>ibuf=3</TD>
     <TD>lut1=30</TD>
-    <TD>lut2=13</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=13</TD>
-    <TD>lut4=16</TD>
-    <TD>lut5=17</TD>
-    <TD>lut6=39</TD>
+    <TD>lut2=12</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=11</TD>
+    <TD>lut4=12</TD>
+    <TD>lut5=20</TD>
+    <TD>lut6=43</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=1</TD>
     <TD>muxf7=2</TD>
     <TD>obuf=19</TD>
@@ -125,16 +125,16 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=2</TD>
     <TD>carry4=7</TD>
-    <TD>fdre=79</TD>
+    <TD>fdre=80</TD>
     <TD>fdse=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>gnd=8</TD>
     <TD>ibuf=3</TD>
     <TD>lut1=30</TD>
-    <TD>lut2=13</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=13</TD>
-    <TD>lut4=16</TD>
-    <TD>lut5=17</TD>
-    <TD>lut6=39</TD>
+    <TD>lut2=12</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=11</TD>
+    <TD>lut4=12</TD>
+    <TD>lut5=20</TD>
+    <TD>lut6=43</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=1</TD>
     <TD>muxf7=2</TD>
     <TD>obuf=19</TD>
@@ -166,7 +166,7 @@
     <TD>use_inclk_switchover=false</TD>
 </TR><TR ALIGN='LEFT'>    <TD>use_locked=true</TD>
     <TD>use_max_i_jitter=false</TD>
-    <TD>use_min_o_jitter=false</TD>
+    <TD>use_min_o_jitter=true</TD>
     <TD>use_phase_alignment=true</TD>
 </TR><TR ALIGN='LEFT'>    <TD>use_power_down=false</TD>
     <TD>use_reset=true</TD>
@@ -216,7 +216,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>timing-17=38</TD>
+<TR ALIGN='LEFT'>    <TD>timing-17=39</TD>
     <TD>timing-18=18</TD>
     <TD>xdcc-1=1</TD>
 </TR>   </TABLE>
@@ -251,7 +251,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000315</TD>
+    <TD>clocks=0.000744</TD>
     <TD>confidence_level_clock_activity=Low</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -260,20 +260,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.157539</TD>
+    <TD>devstatic=0.157582</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a200tsbg484-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.128252</TD>
+    <TD>dynamic=0.136917</TD>
     <TD>effective_thetaja=3.3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.008809</TD>
+    <TD>i/o=0.007508</TD>
     <TD>input_toggle=12.500000</TD>
-    <TD>junction_temp=25.9 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000319</TD>
+    <TD>junction_temp=26.0 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000272</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -282,15 +282,15 @@
     <TD>mgtavtt_static_current=0.000000</TD>
     <TD>mgtavtt_total_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
-    <TD>mmcm=0.118410</TD>
+    <TD>mmcm=0.128056</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.285791</TD>
+</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.294498</TD>
     <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>package=sbg484</TD>
-    <TD>pct_clock_constrained=0.670000</TD>
+    <TD>pct_clock_constrained=0.720000</TD>
     <TD>pct_inputs_defined=33</TD>
     <TD>platform=lin64</TD>
 </TR><TR ALIGN='LEFT'>    <TD>process=typical</TD>
@@ -299,7 +299,7 @@
     <TD>read_saif=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-    <TD>signals=0.000398</TD>
+    <TD>signals=0.000338</TD>
     <TD>simulation_file=None</TD>
 </TR><TR ALIGN='LEFT'>    <TD>speedgrade=-1</TD>
     <TD>static_prob=False</TD>
@@ -309,28 +309,28 @@
     <TD>toggle_rate=False</TD>
     <TD>user_board_temp=25.0 (C)</TD>
     <TD>user_effective_thetaja=3.3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>user_junc_temp=25.9 (C)</TD>
+</TR><TR ALIGN='LEFT'>    <TD>user_junc_temp=26.0 (C)</TD>
     <TD>user_thetajb=5.0 (C/W)</TD>
     <TD>user_thetasa=4.6 (C/W)</TD>
     <TD>vccadc_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_static_current=0.020000</TD>
     <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.066078</TD>
+    <TD>vccaux_dynamic_current=0.071293</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_dynamic_current=0.000000</TD>
     <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_static_current=0.030559</TD>
-    <TD>vccaux_total_current=0.096637</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_static_current=0.030563</TD>
+    <TD>vccaux_total_current=0.101856</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccbram_static_current=0.000738</TD>
-    <TD>vccbram_total_current=0.000738</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_static_current=0.000739</TD>
+    <TD>vccbram_total_current=0.000739</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.001168</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.030794</TD>
-    <TD>vccint_total_current=0.031963</TD>
+    <TD>vccint_dynamic_current=0.001657</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.030830</TD>
+    <TD>vccint_total_current=0.032487</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco12_static_current=0.005000</TD>
@@ -348,13 +348,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>vcco18_static_current=0.000000</TD>
     <TD>vcco18_total_current=0.000000</TD>
     <TD>vcco18_voltage=1.800000</TD>
-    <TD>vcco25_dynamic_current=0.000885</TD>
+    <TD>vcco25_dynamic_current=0.000708</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_static_current=0.005000</TD>
-    <TD>vcco25_total_current=0.005885</TD>
+    <TD>vcco25_total_current=0.005708</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.001797</TD>
+    <TD>vcco33_dynamic_current=0.001564</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco33_static_current=0.005000</TD>
-    <TD>vcco33_total_current=0.006797</TD>
+    <TD>vcco33_total_current=0.006564</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2016.4</TD>
 </TR>   </TABLE>
@@ -471,7 +471,7 @@
     <TD>carry4_functional_category=CarryLogic</TD>
     <TD>carry4_used=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=79</TD>
+    <TD>fdre_used=80</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
@@ -479,15 +479,15 @@
     <TD>lut1_functional_category=LUT</TD>
     <TD>lut1_used=9</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=14</TD>
+    <TD>lut2_used=12</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=15</TD>
+    <TD>lut3_used=13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=15</TD>
+    <TD>lut4_used=12</TD>
     <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=17</TD>
+    <TD>lut5_used=20</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=39</TD>
+    <TD>lut6_used=43</TD>
     <TD>mmcme2_adv_functional_category=Clock</TD>
     <TD>mmcme2_adv_used=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
@@ -509,7 +509,7 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=133800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=99</TD>
+    <TD>lut_as_logic_used=98</TD>
     <TD>lut_as_logic_util_percentage=0.07</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=46200</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -517,7 +517,7 @@
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=267600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=83</TD>
+    <TD>register_as_flip_flop_used=84</TD>
     <TD>register_as_flip_flop_util_percentage=0.03</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=267600</TD>
     <TD>register_as_latch_fixed=0</TD>
@@ -525,11 +525,11 @@
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=133800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=99</TD>
+    <TD>slice_luts_used=98</TD>
     <TD>slice_luts_util_percentage=0.07</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=267600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=83</TD>
+    <TD>slice_registers_used=84</TD>
     <TD>slice_registers_util_percentage=0.03</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.03</TD>
     <TD>fully_used_lut_ff_pairs_used=7</TD>
@@ -537,7 +537,7 @@
     <TD>lut_as_distributed_ram_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=133800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=99</TD>
+    <TD>lut_as_logic_used=98</TD>
     <TD>lut_as_logic_util_percentage=0.07</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=46200</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -546,28 +546,28 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=42</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=42</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=43</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=47</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=47</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=47</TD>
     <TD>lut_flip_flop_pairs_available=133800</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=50</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=55</TD>
     <TD>lut_flip_flop_pairs_util_percentage=0.04</TD>
     <TD>slice_available=33450</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=42</TD>
-    <TD>slice_util_percentage=0.13</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=37</TD>
+    <TD>slice_util_percentage=0.11</TD>
     <TD>slicel_fixed=0</TD>
     <TD>slicel_used=29</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=13</TD>
+    <TD>slicem_used=8</TD>
     <TD>unique_control_sets_used=10</TD>
     <TD>using_o5_and_o6_fixed=10</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=10</TD>
-    <TD>using_o5_output_only_fixed=10</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=11</TD>
+    <TD>using_o5_output_only_fixed=11</TD>
     <TD>using_o5_output_only_used=1</TD>
     <TD>using_o6_output_only_fixed=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=88</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=86</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -617,7 +617,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=477713</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=474799</TD>
     <TD>bogomips=6600</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
@@ -627,15 +627,15 @@
     <TD>ctrls=10</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=0</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=180846</TD>
-    <TD>ff=83</TD>
+    <TD>estimated_expansions=183090</TD>
+    <TD>ff=84</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=2</TD>
     <TD>high_fanout_nets=0</TD>
     <TD>iob=24</TD>
     <TD>lut=102</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=242</TD>
-    <TD>nets=268</TD>
-    <TD>pins=1250</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=243</TD>
+    <TD>nets=269</TD>
+    <TD>pins=1272</TD>
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
@@ -687,10 +687,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:18s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:19s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=517.516MB</TD>
-    <TD>memory_peak=1515.477MB</TD>
+    <TD>memory_gain=517.508MB</TD>
+    <TD>memory_peak=1515.469MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
