--- a/DSP/DSP.runs/impl_1/usage_statistics_webtalk.html
+++ b/DSP/DSP.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1846317</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu May  4 19:59:17 2017</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu May  4 22:55:02 2017</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2017.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>9b562c261b20467093d14aa91dfb8cb9</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>87</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>94f87975d14b5a14bacf453d441b8afd</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211145601_0_0_600</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>88</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>6fd6e23d-9673-4e15-b255-5d170cc46734</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>6fd6e23d-9673-4e15-b255-5d170cc46734</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a200t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-5820K CPU @ 3.30GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1400.042 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3627.421 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
-  <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 17.04</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>67.000 GB</TD>
+  <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 14.04.4 LTS</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -36,99 +36,107 @@
    <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_simulation_specific_hdl_files=4</TD>
-   <TD>basedialog_apply=1</TD>
-   <TD>basedialog_cancel=31</TD>
-   <TD>basedialog_ok=73</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=2</TD>
+   <TD>basedialog_apply=5</TD>
+   <TD>basedialog_cancel=32</TD>
+   <TD>basedialog_no=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=76</TD>
+   <TD>basedialog_yes=3</TD>
    <TD>cmdmsgdialog_messages=2</TD>
-   <TD>cmdmsgdialog_ok=55</TD>
+   <TD>cmdmsgdialog_ok=57</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_open_messages_view=1</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>coretreetablepanel_core_tree_table=40</TD>
+   <TD>coretreetablepanel_core_tree_table=40</TD>
    <TD>createsrcfiledialog_file_name=16</TD>
-   <TD>expreporttreepanel_exp_report_tree_table=5</TD>
-   <TD>filesetpanel_file_set_panel_tree=386</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=545</TD>
+</TR><TR ALIGN='LEFT'>   <TD>expreporttreepanel_exp_report_tree_table=5</TD>
+   <TD>filesetpanel_file_set_panel_tree=407</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=561</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
-   <TD>gettingstartedview_open_project=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_open_project=7</TD>
    <TD>gettingstartedview_recent_projects=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>hardwaretreepanel_hardware_tree_table=11</TD>
+   <TD>hardwaretreepanel_hardware_tree_table=11</TD>
    <TD>hcodeeditor_diff_with=3</TD>
-   <TD>hcodeeditor_search_text_combo_box=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hcodeeditor_search_text_combo_box=10</TD>
    <TD>launchpanel_dont_show_this_dialog_again=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_edit=2</TD>
-   <TD>mainmenumgr_export=1</TD>
-   <TD>mainmenumgr_file=6</TD>
-   <TD>mainmenumgr_flow=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_open_recent_file=1</TD>
-   <TD>mainmenumgr_report=1</TD>
-   <TD>mainmenumgr_tools=2</TD>
-   <TD>mainmenumgr_view=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_window=2</TD>
+   <TD>mainmenumgr_edit=4</TD>
+   <TD>mainmenumgr_export=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=10</TD>
+   <TD>mainmenumgr_flow=4</TD>
+   <TD>mainmenumgr_open_recent_file=5</TD>
+   <TD>mainmenumgr_report=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_tools=5</TD>
+   <TD>mainmenumgr_view=10</TD>
+   <TD>mainmenumgr_window=4</TD>
    <TD>mainwinmenumgr_layout=4</TD>
-   <TD>messagewithoptiondialog_dont_show_this_dialog_again=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>messagewithoptiondialog_dont_show_this_dialog_again=6</TD>
    <TD>msgtreepanel_message_view_tree=16</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_error_messages=1</TD>
+   <TD>msgview_error_messages=1</TD>
    <TD>msgview_information_messages=7</TD>
-   <TD>msgview_status_messages=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_status_messages=1</TD>
    <TD>msgview_warning_messages=10</TD>
-</TR><TR ALIGN='LEFT'>   <TD>newprojectwizard_do_not_specify_sources_at_this_time=1</TD>
-   <TD>openfileaction_open_directory=1</TD>
+   <TD>newprojectwizard_do_not_specify_sources_at_this_time=1</TD>
+   <TD>numjobschooser_number_of_jobs=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openfileaction_open_directory=1</TD>
    <TD>pacodeview_find=1</TD>
    <TD>pacommandnames_auto_connect_target=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=6</TD>
-   <TD>pacommandnames_exit=1</TD>
+   <TD>pacommandnames_auto_update_hier=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_exit=1</TD>
    <TD>pacommandnames_open_project=2</TD>
    <TD>pacommandnames_open_target=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_project_summary=2</TD>
-   <TD>pacommandnames_reports_window=1</TD>
+   <TD>pacommandnames_project_summary=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_reports_window=1</TD>
    <TD>pacommandnames_set_as_top=4</TD>
    <TD>pacommandnames_simulation_live_break=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_restart=57</TD>
-   <TD>pacommandnames_simulation_live_run=70</TD>
-   <TD>pacommandnames_simulation_live_run_all=1</TD>
-   <TD>pacommandnames_simulation_run_behavioral=92</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_zoom_fit=3</TD>
-   <TD>pacommandnames_zoom_out=4</TD>
+   <TD>pacommandnames_simulation_live_restart=59</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_run=74</TD>
+   <TD>pacommandnames_simulation_live_run_all=2</TD>
+   <TD>pacommandnames_simulation_run_behavioral=99</TD>
+   <TD>pacommandnames_zoom_fit=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_zoom_out=4</TD>
    <TD>partchooser_boards=2</TD>
-   <TD>paviews_code=26</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_flow_navigator=3</TD>
-   <TD>paviews_ip_catalog=5</TD>
+   <TD>paviews_code=29</TD>
+   <TD>paviews_flow_navigator=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_ip_catalog=5</TD>
    <TD>paviews_project_summary=6</TD>
    <TD>programfpgadialog_program=71</TD>
-</TR><TR ALIGN='LEFT'>   <TD>progressdialog_cancel=1</TD>
-   <TD>projectnamechooser_choose_project_location=1</TD>
+   <TD>progressdialog_cancel=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=1</TD>
    <TD>projectnamechooser_project_name=1</TD>
    <TD>projectsummaryutilizationpanel_project_summary_utilization_panel_tabbed=1</TD>
+   <TD>rdicommands_custom_commands=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=3</TD>
    <TD>rdicommands_properties=1</TD>
    <TD>rdicommands_save_file=505</TD>
-   <TD>rdicommands_settings=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdiviews_waveform_viewer=451</TD>
+   <TD>rdicommands_settings=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_waveform_save_configuration=1</TD>
+   <TD>rdiviews_waveform_viewer=477</TD>
    <TD>removesourcesdialog_also_delete=2</TD>
    <TD>reportipstatusinfodialog_ignore=1</TD>
-   <TD>saveprojectutils_save=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>settingsdialog_options_tree=6</TD>
-   <TD>simpleoutputproductdialog_apply_options_and_dismiss_dialog_without=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=1</TD>
+   <TD>settingsdialog_options_tree=9</TD>
+   <TD>settingseditorpage_use_this_drop_down_list_box_to_select=1</TD>
+   <TD>settingsthemepanel_select_colors_and_font_that_have=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simpleoutputproductdialog_apply_options_and_dismiss_dialog_without=4</TD>
    <TD>simpleoutputproductdialog_close_dialog_unsaved_changes_will=18</TD>
    <TD>simpleoutputproductdialog_generate_output_products_immediately=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simpleoutputproductdialog_synthesize_design_globally=4</TD>
-   <TD>simulationliverunforcomp_specify_time_and_units=10</TD>
+   <TD>simpleoutputproductdialog_synthesize_design_globally=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationliverunforcomp_specify_time_and_units=14</TD>
    <TD>simulationobjectspanel_simulation_objects_tree_table=141</TD>
    <TD>simulationscopespanel_simulation_scopes_tree_table=54</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=6</TD>
-   <TD>srcchooserpanel_add_or_create_source_file=2</TD>
+   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_or_create_source_file=2</TD>
    <TD>srcchooserpanel_create_file=16</TD>
    <TD>srcchooserpanel_make_local_copy_of_these_files_into=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcfileproppanels_location=1</TD>
-   <TD>srcfileproppanels_type=1</TD>
+   <TD>srcfileproppanels_location=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcfileproppanels_type=1</TD>
    <TD>srcmenu_ip_documentation=1</TD>
    <TD>srcmenu_ip_hierarchy=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>statemonitor_cancel=6</TD>
-   <TD>statemonitor_reset_run=2</TD>
+   <TD>statemonitor_cancel=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>statemonitor_reset_run=2</TD>
    <TD>systembuilderview_expand_collapse=1</TD>
-   <TD>tclconsoleview_tcl_console_code_editor=2</TD>
+   <TD>tclconsoleview_copy=1</TD>
+   <TD>tclconsoleview_tcl_console_code_editor=6</TD>
 </TR><TR ALIGN='LEFT'>   <TD>touchpointsurveydialog_no=2</TD>
-   <TD>waveformnametree_waveform_name_tree=109</TD>
+   <TD>waveformnametree_waveform_name_tree=113</TD>
    <TD>waveformview_goto_time_0=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -149,31 +157,33 @@
    <TD>newproject=1</TD>
    <TD>openblockdesign=2</TD>
    <TD>openhardwaremanager=85</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openproject=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openproject=9</TD>
    <TD>openrecenttarget=11</TD>
    <TD>opentarget=1</TD>
    <TD>programdevice=74</TD>
 </TR><TR ALIGN='LEFT'>   <TD>projectsettingscmdhandler=6</TD>
    <TD>projectsummary=2</TD>
    <TD>recustomizecore=25</TD>
-   <TD>runbitgen=100</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=7</TD>
+   <TD>runbitgen=101</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runimplementation=1</TD>
+   <TD>runsynthesis=8</TD>
    <TD>settopnode=4</TD>
-   <TD>showview=6</TD>
-   <TD>simulationbreak=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationrestart=57</TD>
-   <TD>simulationrun=92</TD>
-   <TD>simulationrunall=1</TD>
-   <TD>simulationrunfortime=69</TD>
-</TR><TR ALIGN='LEFT'>   <TD>toolssettings=2</TD>
-   <TD>viewtaskprojectmanager=71</TD>
+   <TD>showview=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationbreak=1</TD>
+   <TD>simulationrestart=59</TD>
+   <TD>simulationrun=99</TD>
+   <TD>simulationrunall=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationrunfortime=73</TD>
+   <TD>toolssettings=3</TD>
+   <TD>viewtaskprojectmanager=72</TD>
    <TD>viewtasksimulation=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformsaveconfiguration=1</TD>
    <TD>zoomfit=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>zoomout=4</TD>
+   <TD>zoomout=4</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=20</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=21</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -197,7 +207,7 @@
    <TD>launch_simulation_questa=0</TD>
    <TD>launch_simulation_riviera=0</TD>
    <TD>launch_simulation_vcs=0</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=91</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=98</TD>
    <TD>simulator_language=Mixed</TD>
    <TD>srcsetcount=14</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
@@ -413,7 +423,7 @@
     <TD>output_load=5.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_toggle=12.500000</TD>
     <TD>package=sbg484</TD>
-    <TD>pct_clock_constrained=13.560000</TD>
+    <TD>pct_clock_constrained=9.700000</TD>
     <TD>pct_inputs_defined=25</TD>
 </TR><TR ALIGN='LEFT'>    <TD>platform=lin64</TD>
     <TD>process=typical</TD>
@@ -752,7 +762,7 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>actual_expansions=11069306</TD>
-    <TD>bogomips=6600</TD>
+    <TD>bogomips=6599</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufg=0</TD>
@@ -773,7 +783,7 @@
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
-    <TD>threads=8</TD>
+    <TD>threads=4</TD>
     <TD>timing_constraints_exist=1</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -822,10 +832,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:01:32s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:02:03s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=772.801MB</TD>
-    <TD>memory_peak=1857.152MB</TD>
+    <TD>memory_gain=752.844MB</TD>
+    <TD>memory_peak=1841.160MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
